docs(api): login response component
